# imessage-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: setup_skill_symlinks.sh
skills/add-imessage-contact/: SKILL.md
skills/add-imessage-contact/agents/: openai.yaml
skills/add-imessage-contact/scripts/: add_imessage_contact.py
skills/search-imessage-contacts/: SKILL.md
skills/search-imessage-contacts/agents/: openai.yaml
skills/search-imessage-contacts/scripts/: search_imessage_contacts.py
skills/search-imessages/: SKILL.md
skills/search-imessages/agents/: openai.yaml
skills/search-imessages/scripts/: search_imessages.py
skills/send-imessage/: SKILL.md
skills/send-imessage/agents/: openai.yaml
skills/send-imessage/scripts/: send_imessage.py
src/imessage_wrapper/: __init__.py  client.py  contacts_writer.py  core.py  models.py
tests/: test_client_api.py  test_core_legacy.py  test_openclaw_parity.py  test_setup_skill_symlinks.py
