[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imessage-wrapper"
version = "0.1.0"
description = "Sync-first Python API for local macOS Messages and Contacts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "imessage-wrapper contributors"}]
dependencies = [
    "phonenumbers>=8.13",
]

[project.optional-dependencies]
contacts = [
    "pyobjc-framework-Contacts>=10.0; sys_platform == 'darwin'",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
